--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "generate": "hexo generate",
+    "server": "hexo server"
+  },
   "hexo": {
     "version": "3.2.2"
   },
